truenas/apps/truenas-jellyfin-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: media-jellyfin
  namespace: truenas
subsets:
- addresses:
  - ip: 10.139.21.199
  ports:
  - name: http
    port: 8096
    protocol: TCP
