truenas/apps/truenas-jellyfin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-jellyfin
  namespace: truenas
spec:
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
      name: http
  clusterIP: None
  type: ClusterIP
