truenas/apps/truenas-jellyfin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-jellyfin-traefik
  namespace: truenas
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: "media.rahmed.work"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: media-jellyfin
            port:
              number: 8096
  tls:
    - hosts:
      - media.rahmed.work
      secretName: media.rahmed.work-cert
